--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,6 +45,9 @@ ul {
 .main__contact-us {
   padding: 2rem;
 }
+.main__visit-us .openinghours {
+  margin-bottom: 2rem;
+}
 .menu_dropdown,
 .section__this-month,
 .section__explore,
@@ -232,15 +235,16 @@ footer {
 .card__exhibitions {
   justify-content: space-between;
 }
-.card__exhibitions_gradient-from-left {
-  background: linear-gradient(358.52deg, #e1f2d4 61.4%, rgba(255, 255, 255, 0) 98.49%);
-  border-radius: 0px 0px 50px 0px;
+.card__exhibitions_gradient-from-left,
+.card__exhibitions_gradient-from-right {
+  background: linear-gradient(358.52deg, #eeeefff6 61.4%, rgba(255, 255, 255, 0) 98.49%);
   padding-top: 10rem;
 }
+.card__exhibitions_gradient-from-left {
+  border-radius: 0px 0px 50px 0px;
+}
 .card__exhibitions_gradient-from-right {
-  background: linear-gradient(358.52deg, #f3edf9 61.4%, rgba(255, 255, 255, 0) 98.49%);
   border-radius: 0px 0px 0px 50px;
-  padding-top: 10rem;
 }
 .card__exhibitions_background_1 {
   background: 100% no-repeat url(/images_compressed/pixabay_planet_compressed.jpg);
